--- a/应用文档/01_工具网站/常用网站.md
+++ b/应用文档/01_工具网站/常用网站.md
@@ -463,7 +463,7 @@ eclipse.ini文件，在文件的最后添加指令：
 点击➕ → 从GitHub/Gitlab导入仓库
 ```
 
-![image-20241203214643086](..\imgs\01\Website\Git\Gitee/image-20241203214643086.png)
+![image-20241203214643086](../imgs/01/Website/Git/Gitee/image-20241203214643086.png)
 
 2. GitHub 导入 Gitee
 
@@ -471,7 +471,7 @@ eclipse.ini文件，在文件的最后添加指令：
 点击➕ → Import repository
 ```
 
-![image-20241203224003396](..\imgs\01\Website\Git\Gitee/image-20241203224003396.png)
+![image-20241203224003396](../imgs/01/Website/Git/Gitee/image-20241203224003396.png)
 
 3. 修改 [.git 文件夹] 下的 [config 配置文件]
 
@@ -489,7 +489,7 @@ Gitee 与本地的 Git 分支为 master
 为实现同步，可以在 Github 上创建一个 master 分支，保持三者一致
 ```
 
-![image-20241204001128532](..\imgs\01\Website\Git\Gitee/image-20241204001128532.png)
+![image-20241204001128532](../imgs/01/Website/Git/Gitee/image-20241204001128532.png)
 
 ## 【[Gitea](https://gitea.com)】官网
 
@@ -558,7 +558,7 @@ cmd 进入被锁的文件夹
 输入 del lock /q/s
 ```
 
-![image-20210926125151440](..\imgs\01\Website\TortoiseSVN/image-20210926125151440.png)
+![image-20210926125151440](../imgs/01/Website/TortoiseSVN/image-20210926125151440.png)
 
 或者 右击被锁文件夹
 
@@ -566,9 +566,9 @@ cmd 进入被锁的文件夹
 选择 TortoiseSVN 点击 Clean up 勾选 Break write locks【Clean up working copy status 默认被勾选】
 ```
 
-![image-20210926123122785](..\imgs\01\Website\TortoiseSVN/image-20210926123122785.png)
+![image-20210926123122785](../imgs/01/Website/TortoiseSVN/image-20210926123122785.png)
 
-![image-20210926123956330](..\imgs\01\Website\TortoiseSVN/image-20210926123956330.png)
+![image-20210926123956330](../imgs/01/Website/TortoiseSVN/image-20210926123956330.png)
 
 ## 【[Oracle](https://www.oracle.com/index.html)】官网
 
@@ -580,7 +580,7 @@ https://www.oracle.com/downloads
 https://edelivery.oracle.com/osdc/faces/SoftwareDelivery
 ```
 
-### # <a href="..\document\01\Website\OracleDatabase.md">OracleDatabase</a>
+### # <a href="../document/01/Website/OracleDatabase.md">OracleDatabase</a>
 
 ### # [JDK](https://www.oracle.com/java) 官网
 
@@ -609,7 +609,7 @@ Java Archive Downloads - Java SE 8
 点击 The Structure of the Java Virtual Machine 查看虚拟机结构
 ```
 
-### # <a href="..\document\01\Website\JDK环境变量.md">JDK环境变量</a>
+### # <a href="../document/01/Website/JDK环境变量.md">JDK环境变量</a>
 
 ```markdown
 * API
@@ -736,7 +736,7 @@ thrift -help
 
 #### * IDL文件编译
 
-<a href="..\document\01\Website\user.txt">user.thrift</a> (文件后缀 改称 .thrift)
+<a href="../document/01/Website/user.txt">user.thrift</a> (文件后缀 改称 .thrift)
 
 ```markdown
 # 生成 java
@@ -816,7 +816,7 @@ https://shardingsphere.apache.org/document/5.2.1/cn/overview
 
 ## 【[CentOS](https://www.centos.org)】官网
 
-[VMware 安装镜像](.\常用工具.md## [新建虚拟机])
+[VMware 安装镜像](./常用工具.md## [新建虚拟机])
 
 ```markdown
 # 下载地址
@@ -1149,7 +1149,7 @@ vi /etc/redis_v5/redis_xxxx.conf
 
 ###### 进阶参考
 
-[哨兵主从集群](..\document\01\Website\哨兵主从集群.md)
+[哨兵主从集群](../document/01/Website/哨兵主从集群.md)
 
 ###### 常见错误
 
@@ -1573,11 +1573,11 @@ yum -y install vim*
 
 两个有依赖同时安装问题：
 
-![image-20210306203012338](..\imgs\01\Website\Centos/image-20210306203012338.png)
+![image-20210306203012338](../imgs/01/Website/Centos/image-20210306203012338.png)
 
 一起安装问题：
 
-![image-20210306204644384](..\imgs\01\Website\Centos/image-20210306204644384.png)
+![image-20210306204644384](../imgs/01/Website/Centos/image-20210306204644384.png)
 
 ### 常见问题
 
@@ -1592,7 +1592,7 @@ yum -y install vim*
   使用：[Debian]系列[命令]
 ```
 
-<a href="..\document\01\Website\AptGetUpdate.txt">AptGetUpdate</a>
+<a href="../document/01/Website/AptGetUpdate.txt">AptGetUpdate</a>
 
 #### > 和 >> 的区别
 
@@ -2240,9 +2240,9 @@ https://dysms.console.aliyun.com
 
 注意：个人版容器镜像服务在 → 新版网站中
 
-![image-20210307110036012](..\imgs\01\Website\Aliyun/image-20210307110036012.png)
+![image-20210307110036012](../imgs/01/Website/Aliyun/image-20210307110036012.png)
 
-![image-20210307110716445](..\imgs\01\Website\Aliyun/image-20210307110716445.png)
+![image-20210307110716445](../imgs/01/Website/Aliyun/image-20210307110716445.png)
 
 ## 【七牛云】官网
 
@@ -2665,11 +2665,11 @@ C:\Users\Viski\AppData\Roaming\npm
 C:\Users\Viski\AppData\Roaming\npm-cache
 ```
 
-![image-20210411105511817](..\imgs\01\Website\Node.js/image-20210411105511817.png)
+![image-20210411105511817](../imgs/01/Website/Node.js/image-20210411105511817.png)
 
-![image-20210411105729465](..\imgs\01\Website\Node.js/image-20210411105729465.png)
+![image-20210411105729465](../imgs/01/Website/Node.js/image-20210411105729465.png)
 
-![image-20210411110756672](..\imgs\01\Website\Node.js/image-20210411110756672.png)
+![image-20210411110756672](../imgs/01/Website/Node.js/image-20210411110756672.png)
 
 ### # [npm软件包](https://www.npmjs.com)
 
@@ -2685,9 +2685,9 @@ https://blog.csdn.net/zhan107876/article/details/123326616
 https://docs.npmjs.com
 ```
 
-![image-20230216154124166](..\imgs\01\Website\Vue/image-20230216154124166.png)
+![image-20230216154124166](../imgs/01/Website/Vue/image-20230216154124166.png)
 
-![image-20230216154631881](..\imgs\01\Website\Vue/image-20230216154631881.png)
+![image-20230216154631881](../imgs/01/Website/Vue/image-20230216154631881.png)
 
 ### # [npm全局配置](https://blog.csdn.net/LoveQHM/article/details/124472182)
 
@@ -3018,7 +3018,7 @@ vue init webpack vue-2
 npm run dev
 ```
 
-![vu2-create](..\imgs\01\Website\Vue\vu2-create.png)
+![vu2-create](../imgs/01/Website/Vue\vu2-create.png)
 
 #### 空项目方式
 
@@ -3081,7 +3081,7 @@ Use NPM
   vue add typescript
 ```
 
-![image-20240605064427032](..\imgs\01\Website\Vue/image-20240605064427032.png)
+![image-20240605064427032](../imgs/01/Website/Vue/image-20240605064427032.png)
 
 ##### 常见问题
 
@@ -3451,9 +3451,9 @@ Workers & Pages | Subdomain → 输入[新子域名] → Continue
 
 ### [Workers部署](https://z008.blogspot.com/2024/03/2CJD.html)
 
-<a href="..\document\01\Website\VPN\_worker.js">_worker.js</a>  →  [GitHub资源](https://github.com/3Kmfi6HP/EDtunnel)
+<a href="../document/01/Website/VPN\_worker.js">_worker.js</a>  →  [GitHub资源](https://github.com/3Kmfi6HP/EDtunnel)
 
-编辑服务器  |  <a href="..\document\01\Website\VPN\IP_域名_端口.md">节点优选</a>
+编辑服务器  |  <a href="../document/01/Website/VPN\IP_域名_端口.md">节点优选</a>
 
 ```markdown
 # vless copy 地址
@@ -3465,7 +3465,7 @@ vless://6d68f9e6-07f1-4d5e-856d-a0b61cf09d14@172.104.127.132:443?encryption=none
 
 ### [Pages部署](https://z008.blogspot.com/2024/03/YJJD.html)
 
-<a href="..\document\01\Website\VPN\worker.zip">worker.zip</a>  →  [GitHub资源](https://github.com/ZZY202203/Cloudflare-Vless1)
+<a href="../document/01/Website/VPN\worker.zip">worker.zip</a>  →  [GitHub资源](https://github.com/ZZY202203/Cloudflare-Vless1)
 
 [Trojan](https://www.youtube.com/watch?v=gP8TQdCpsmA)  |  [BPB](https://www.youtube.com/watch?v=q3OKoMH5Onw)
 
@@ -3485,7 +3485,7 @@ https://singbox-d8b.pages.dev/19154236-c58e-48ef-8827-5e5d3a6c4262
 
 [worker.zip](https://github.com/cmliu/edgetunnel/raw/main/worker.zip)  →  [Pages 上传](https://www.youtube.com/watch?v=59THrmJhmAw)
 
-[变量介绍](https://www.youtube.com/watch?v=s91zjpw3-P8) | [订阅器-使用](https://www.youtube.com/watch?v=OjqCKeEY7DQ) → <a href="..\document\01\Website\VPN\订阅器使用.txt">文档</a> | [订阅器-部署](https://www.youtube.com/watch?v=AtCF7eq0hcE) | [订阅器-讲解](https://www.youtube.com/watch?v=p-KhFJAC4WQ)
+[变量介绍](https://www.youtube.com/watch?v=s91zjpw3-P8) | [订阅器-使用](https://www.youtube.com/watch?v=OjqCKeEY7DQ) → <a href="../document/01/Website/VPN\订阅器使用.txt">文档</a> | [订阅器-部署](https://www.youtube.com/watch?v=AtCF7eq0hcE) | [订阅器-讲解](https://www.youtube.com/watch?v=p-KhFJAC4WQ)
 
 ```markdown
 # 说明
@@ -3517,9 +3517,9 @@ PROXYIP		   [IPV6地址]
 
 [_worker.js](https://github.com/yonggekkk/Cloudflare_vless_trojan/blob/main/Vless_workers_pages/_worker.js)  →  [Workers 教程](https://www.youtube.com/watch?v=9V9CQxmfwoA)
 
-<a href="..\document\01\Website\VPN\vless_worker.zip">vless_worker.zip</a>  →  [Pages 上传](https://www.youtube.com/watch?v=McdRoLZeTqg)  (将  _worker.js  压缩成  vless_worker.zip)
+<a href="../document/01/Website/VPN\vless_worker.zip">vless_worker.zip</a>  →  [Pages 上传](https://www.youtube.com/watch?v=McdRoLZeTqg)  (将  _worker.js  压缩成  vless_worker.zip)
 
-[_worker.js](https://github.com/yonggekkk/Cloudflare_vless_trojan/blob/main/Trojan_workers_pages/_worker.js)  |  <a href="..\document\01\Website\VPN\trojan_worker.zip">trojan_worker.zip</a>  →  [Trojan 部署](https://www.youtube.com/watch?v=lmhhL8M1k0I)
+[_worker.js](https://github.com/yonggekkk/Cloudflare_vless_trojan/blob/main/Trojan_workers_pages/_worker.js)  |  <a href="../document/01/Website/VPN\trojan_worker.zip">trojan_worker.zip</a>  →  [Trojan 部署](https://www.youtube.com/watch?v=lmhhL8M1k0I)
 
 ```markdown
 # 说明
@@ -3556,15 +3556,15 @@ Simple.0121
 server=="cloudflare" && port=="443" && header="Forbidden" && country=="JP"
 ```
 
-![image-20241130011212849](..\imgs\01\Website\VPN/image-20241130011212849.png)
+![image-20241130011212849](../imgs/01/Website/VPN/image-20241130011212849.png)
 
 2) 也可在 [个人中心] →  [下载记录] →  [立即下载]
 
-![image-20241130011616477](..\imgs\01\Website\VPN/image-20241130011616477.png)
+![image-20241130011616477](../imgs/01/Website/VPN/image-20241130011616477.png)
 
 3) 打开 [V2rayN]，右击 [节点]，点击 [批量导出分享URL]
 
-![image-20241130012339785](..\imgs\01\Website\VPN/image-20241130012339785.png)
+![image-20241130012339785](../imgs/01/Website/VPN/image-20241130012339785.png)
 
 4) 打开 [Excel] → 创建 [临时文件] → 复制 [分享URL] 到 [单元格]，如下：
 
@@ -3572,7 +3572,7 @@ server=="cloudflare" && port=="443" && header="Forbidden" && country=="JP"
 [单元格A] vless://a8f00171-edae-4ab1-b9bd-677010b56b70@158.101.159.94:443?encryption=none&security=tls&sni=zizifnwk.weiskey.workers.dev&fp=randomized&type=ws&host=zizifnwk.weiskey.workers.dev&path=%2F%3Fed%3D2048#ZizifnWK_Japan_1
 ```
 
-![image-20241130012835588](..\imgs\01\Website\VPN/image-20241130012835588.png)
+![image-20241130012835588](../imgs/01/Website/VPN/image-20241130012835588.png)
 
 5) 提取 节点(从 @ 之后开始 到 :端口 之前结束) → 分段 信息，如下：
 
@@ -3584,27 +3584,27 @@ server=="cloudflare" && port=="443" && header="Forbidden" && country=="JP"
 [单元格C] :443?encryption=none&security=tls&sni=zizifnwk.weiskey.workers.dev&fp=randomized&type=ws&host=zizifnwk.weiskey.workers.dev&path=%2F%3Fed%3D2048#ZizifnWK_Japan_1
 ```
 
-![image-20241130013727441](..\imgs\01\Website\VPN/image-20241130013727441.png)
+![image-20241130013727441](../imgs/01/Website/VPN/image-20241130013727441.png)
 
 6) 打开 [下载文件] → 复制 [节点]
 
-![image-20241130014524867](..\imgs\01\Website\VPN/image-20241130014524867.png)
+![image-20241130014524867](../imgs/01/Website/VPN/image-20241130014524867.png)
 
 7) 打开 [临时文件] → 替换 [节点] → 复制 [分段信息]
 
-![image-20241130015724647](..\imgs\01\Website\VPN/image-20241130015724647.png)
+![image-20241130015724647](../imgs/01/Website/VPN/image-20241130015724647.png)
 
 8) 替换 [制表符(空格间距)] 为 [空]
 
-![image-20241130020251957](..\imgs\01\Website\VPN/image-20241130020251957.png)
+![image-20241130020251957](../imgs/01/Website/VPN/image-20241130020251957.png)
 
 9) 到 [V2rayN 测试]
 
-![image-20241130020716559](..\imgs\01\Website\VPN/image-20241130020716559.png)
+![image-20241130020716559](../imgs/01/Website/VPN/image-20241130020716559.png)
 
 10) 可在 [YouTube]，查看[IP 所属地]
 
-![image-20241130020946797](..\imgs\01\Website\VPN/image-20241130020946797.png)
+![image-20241130020946797](../imgs/01/Website/VPN/image-20241130020946797.png)
 
 ### App授权(暂时没发现作用)
 
@@ -3675,7 +3675,7 @@ v2rayN-windows-64-SelfContained.zip
       [√] 最终代理
 ```
 
-## 【<a href="..\document\01\Website\VPN\Clash介绍.md">Clash</a>】
+## 【<a href="../document/01/Website/VPN\Clash介绍.md">Clash</a>】
 
 ### [使用教学](https://www.youtube.com/watch?v=IJM5aHaeET8)
 
