--- a/应用文档/02_问题收集/问题整理.md
+++ b/应用文档/02_问题收集/问题整理.md
@@ -220,7 +220,7 @@ null
 C:\Users\Shinelon\AppData\Local\JetBrains\IntelliJIdea2020.3\Maven\Indices
 ```
 
-![image-20210327202631029](..\imgs\02\Question/image-20210327202631029.png)
+![image-20210327202631029](../imgs/02/Question/image-20210327202631029.png)
 
 ```markdown
 遇见的麻烦2：私服引入坐标不能自动下载 jar 包
@@ -231,7 +231,7 @@ C:\Users\Shinelon\AppData\Local\JetBrains\IntelliJIdea2020.3\Maven\Indices
 
 ```
 
-![image-20210223152122108](..\imgs\02\Question/image-20210223152122108.png)
+![image-20210223152122108](../imgs/02/Question/image-20210223152122108.png)
 
 ###### day10【over】
 
@@ -239,13 +239,13 @@ C:\Users\Shinelon\AppData\Local\JetBrains\IntelliJIdea2020.3\Maven\Indices
 遇见的麻烦：<profiles></profiles>环境配置模板中，无法自动下载maven依赖
 ```
 
-![image-20210429171640391](..\imgs\02\Question/image-20210429171640391.png)
+![image-20210429171640391](../imgs/02/Question/image-20210429171640391.png)
 
 ```tex
 解决办法：将插件依赖复制到 <build></build>编译模板中，maven依赖就会自动下载了
 ```
 
-![image-20210429172021254](..\imgs\02\Question/image-20210429172021254.png)
+![image-20210429172021254](../imgs/02/Question/image-20210429172021254.png)
 
 ```tex
 <dependences></dependences>中，可以自动下载jar包依赖
@@ -294,7 +294,7 @@ C:\Users\Shinelon\AppData\Local\JetBrains\IntelliJIdea2020.3\Maven\Indices
 
 例：
 
-![image-20210227174145429](..\imgs\02\Question/image-20210227174145429.png)
+![image-20210227174145429](../imgs/02/Question/image-20210227174145429.png)
 
 ###### day16【!over】
 
@@ -342,11 +342,11 @@ C:\Users\Shinelon\AppData\Local\JetBrains\IntelliJIdea2020.3\Maven\Indices
 
 1)  Java运行时环境内存不足
 
-![image-20210305211745784](..\imgs\02\Question/image-20210305211745784.png)
+![image-20210305211745784](../imgs/02/Question/image-20210305211745784.png)
 
 原因：需要分配小于【分配给Java JVM的内存】
 
-![image-20210305213445940](..\imgs\02\Question/image-20210305213445940.png)
+![image-20210305213445940](../imgs/02/Question/image-20210305213445940.png)
 
 解决办法：
 
@@ -354,27 +354,27 @@ C:\Users\Shinelon\AppData\Local\JetBrains\IntelliJIdea2020.3\Maven\Indices
 
 ​	vi runbroker.sh (在文件中修改分配的内存大小)
 
-![image-20210305213822540](..\imgs\02\Question/image-20210305213822540.png)
+![image-20210305213822540](../imgs/02/Question/image-20210305213822540.png)
 
 2) 若一台虚拟机配置多台机器，需要为主机和从机分配不同的存储路径
 
-![image-20210305220033408](..\imgs\02\Question/image-20210305220033408.png)
+![image-20210305220033408](../imgs/02/Question/image-20210305220033408.png)
 
-![image-20210305220652462](..\imgs\02\Question/image-20210305220652462.png)
+![image-20210305220652462](../imgs/02/Question/image-20210305220652462.png)
 
 3) 主机 ID【等于0】，从机 ID【不等于0】；主机角色为【SYNC_MASTER】从机角色为【SLAVE】
 
 ​	主机 ID & 角色
 
-![image-20210305215621726](..\imgs\02\Question/image-20210305215621726.png)
+![image-20210305215621726](../imgs/02/Question/image-20210305215621726.png)
 
-![image-20210305221918112](..\imgs\02\Question/image-20210305221918112.png)
+![image-20210305221918112](../imgs/02/Question/image-20210305221918112.png)
 
 ​	从机 ID & 角色
 
-![image-20210305215820577](..\imgs\02\Question/image-20210305215820577.png)
+![image-20210305215820577](../imgs/02/Question/image-20210305215820577.png)
 
-![image-20210305222120334](..\imgs\02\Question/image-20210305222120334.png)
+![image-20210305222120334](../imgs/02/Question/image-20210305222120334.png)
 
 4) 注意【broker.conf】文件配置，代理名要对应
 
@@ -382,15 +382,15 @@ C:\Users\Shinelon\AppData\Local\JetBrains\IntelliJIdea2020.3\Maven\Indices
 
 ​	vi broker.conf
 
-![image-20210305222808543](..\imgs\02\Question/image-20210305222808543.png)
+![image-20210305222808543](../imgs/02/Question/image-20210305222808543.png)
 
-![image-20210305223137215](..\imgs\02\Question/image-20210305223137215.png)
+![image-20210305223137215](../imgs/02/Question/image-20210305223137215.png)
 
 5) 注意【master】和【 slave】不要启动重复
 
-![image-20210305233247247](..\imgs\02\Question/image-20210305233247247.png)
+![image-20210305233247247](../imgs/02/Question/image-20210305233247247.png)
 
-![image-20210305233413219](..\imgs\02\Question/image-20210305233413219.png)
+![image-20210305233413219](../imgs/02/Question/image-20210305233413219.png)
 
 # 项目一阶段
 
@@ -404,11 +404,11 @@ C:\Users\Shinelon\AppData\Local\JetBrains\IntelliJIdea2020.3\Maven\Indices
 
 编辑：vi /etc/sysconfig/network-scripts/ifcfg-ens33
 
-![image-20210306212125159](..\imgs\02\Question/image-20210306212125159.png)
+![image-20210306212125159](../imgs/02/Question/image-20210306212125159.png)
 
 遇见问题1：/var/run/yum.pid 已被锁定
 
-![image-20210306183844355](..\imgs\02\Question/image-20210306183844355.png)
+![image-20210306183844355](../imgs/02/Question/image-20210306183844355.png)
 
 问题1解决：输入【rm -rf /var/run/yum.pid】删除该文件
 
@@ -418,7 +418,7 @@ C:\Users\Shinelon\AppData\Local\JetBrains\IntelliJIdea2020.3\Maven\Indices
 
 ​	杀死进程：kill pid
 
-![image-20210307200714574](..\imgs\02\Question/image-20210307200714574.png)
+![image-20210307200714574](../imgs/02/Question/image-20210307200714574.png)
 
 反复杀死进程杀不掉，再次查看占用情况，试试强制杀死进程
 
@@ -426,7 +426,7 @@ C:\Users\Shinelon\AppData\Local\JetBrains\IntelliJIdea2020.3\Maven\Indices
 
 ​	强制杀死进程：kill  9 pid
 
-![image-20210307202220410](..\imgs\02\Question/image-20210307202220410.png)
+![image-20210307202220410](../imgs/02/Question/image-20210307202220410.png)
 
 但再次查看端口还是被占用
 
@@ -436,7 +436,7 @@ C:\Users\Shinelon\AppData\Local\JetBrains\IntelliJIdea2020.3\Maven\Indices
 
 ​	启动容器：docker start mysql
 
-![image-20210307204324620](..\imgs\02\Question/image-20210307204324620.png)
+![image-20210307204324620](../imgs/02/Question/image-20210307204324620.png)
 
 netstat命令各个参数说明如下：
 
@@ -496,13 +496,13 @@ docker build -f /mydocker/Dockfile -t mycentos:1.01 .
 
 D:\IdeaProjects\project1\my-tanhua\my-tanhua-dubbo\my-tanhua-dubbo-quanzi\src\main\java\com\tanhua\dubbo\server\api\QuanZiApiImpl.java
 
-![image-20210315102348206](..\imgs\02\Question/image-20210315102348206.png)
+![image-20210315102348206](../imgs/02/Question/image-20210315102348206.png)
 
-![image-20210315111119589](..\imgs\02\Question/image-20210315111119589.png)
+![image-20210315111119589](../imgs/02/Question/image-20210315111119589.png)
 
 D:\IdeaProjects\project1\my-tanhua\my-tanhua-server\src\main\java\com\tanhua\server\interceptor\TookenInterceptor.java
 
-![](..\imgs\02\Question/image-20210318163140708.png)
+![](../imgs/02/Question/image-20210318163140708.png)
 
 ###### day05【未完成】
 
@@ -587,11 +587,11 @@ null
 
 ​	**(3-1-1) 网页显示：**
 
-![image-20210324165423277](..\imgs\02\Question/image-20210324165423277.png)
+![image-20210324165423277](../imgs/02/Question/image-20210324165423277.png)
 
 ​	**(3-1-2) IDEA显示：**
 
-![image-20210324172758381](..\imgs\02\Question/image-20210324172758381-1616578085114.png)
+![image-20210324172758381](../imgs/02/Question/image-20210324172758381-1616578085114.png)
 
 ​	原因：映射错误。 经检查，在创建索引时，es语句多粘贴了 "mappings"
 
@@ -599,11 +599,11 @@ null
 
 ​	**(3-2-1) 网页显示：**
 
-![image-20210324194211517](..\imgs\02\Question/image-20210324194211517.png)
+![image-20210324194211517](../imgs/02/Question/image-20210324194211517.png)
 
 ​	**(3-2-2) IDEA显示：**
 
-![image-20210324194331778](..\imgs\02\Question/image-20210324194331778.png)
+![image-20210324194331778](../imgs/02/Question/image-20210324194331778.png)
 
 原因：没安装IK(分词器)插件，或安装的IK插件有问题
 
@@ -796,11 +796,11 @@ null
 后端程序中没有找到对应的SQL语句(只找到了配置相关的列名)，这些语句如何生成的，是否为前端控制？
 ```
 
-![image-20210626172115622](..\imgs\02\Question/image-20210626172115622.png)
+![image-20210626172115622](../imgs/02/Question/image-20210626172115622.png)
 
-![image-20210626172220027](..\imgs\02\Question/image-20210626172220027.png)
+![image-20210626172220027](../imgs/02/Question/image-20210626172220027.png)
 
-![image-20210626171812386](..\imgs\02\Question/image-20210626171812386.png)
+![image-20210626171812386](../imgs/02/Question/image-20210626171812386.png)
 
 ###### day10【02~end】
 
@@ -911,19 +911,19 @@ F:\Microsoft SQL Server
 
 # 截图
 
-![image-20210324170801291](..\imgs\02\Question/image-20210324170801291.png)
+![image-20210324170801291](../imgs/02/Question/image-20210324170801291.png)
 
-![img](..\imgs\02\Question\wps1.jpg)
+![img](../imgs/02/Question/wps1.jpg)
 
-![img](..\imgs\02\Question\wps2.jpg)
+![img](../imgs/02/Question/wps2.jpg)
 
-![img](..\imgs\02\Question\wps3.jpg)
+![img](../imgs/02/Question/wps3.jpg)
 
-![img](..\imgs\02\Question\wps4.jpg)
+![img](../imgs/02/Question/wps4.jpg)
 
-![image](..\imgs\02\Question/image-20210118215540351.png)
+![image](../imgs/02/Question/image-20210118215540351.png)
 
-![image](..\imgs\02\Question/image-20210118220403007.png)
+![image](../imgs/02/Question/image-20210118220403007.png)
 
 vi/vim编译问题：
 
@@ -932,9 +932,9 @@ vi/vim编译问题：
 	使用rm .c.txt.swp删除即可
 ```
 
-![image](..\imgs\02\Question/image-20210119142710904.png)
+![image](../imgs/02/Question/image-20210119142710904.png)
 
-资源发布注意事项：![image](..\imgs\02\Question/image-20210121162433221.png)
+资源发布注意事项：![image](../imgs/02/Question/image-20210121162433221.png)
 
 在linux安装nginx出现的错误：
 
@@ -949,7 +949,7 @@ error: the HTTP rewrite module requires the PCRE library.
 
 查看占用端口号并杀死进程
 
-![image](..\imgs\02\Question/image-20210121180943784.png)
+![image](../imgs/02/Question/image-20210121180943784.png)
 
 ```tex
 梦：
