--- a/应用文档/document/01/Website/哨兵主从集群.md
+++ b/应用文档/document/01/Website/哨兵主从集群.md
@@ -57,7 +57,7 @@ sentinel parallel-syncs mymaster 1
 chmod -R 777 /docker-software/redis
 ```
 
-配置文件详见：[docker-software](.\redis_cluster\docker-software.tar.gz)
+配置文件详见：[docker-software](./redis_cluster/docker-software.tar.gz)
 
 ## 主从节点
 
