--- a/应用文档/02_问题收集/日常小结.md
+++ b/应用文档/02_问题收集/日常小结.md
@@ -5671,7 +5671,7 @@ https://blog.csdn.net/begefefsef/article/details/126098501
 =CONCATENATE("insert into 表名(列名1, 列名2) values('",Excel列1,"','",Excel列2,"');")
 ```
 
-![image-20211102184012893](../imgs/02/Summary/Office/Excel Mobile/image-20211102184012893.png)
+![image-20211102184012893](../imgs/02/Summary/Office/ExcelMobile/image-20211102184012893.png)
 
 若有多行数据需要赋值这种格式
 
@@ -5679,9 +5679,9 @@ https://blog.csdn.net/begefefsef/article/details/126098501
 
 可以选中当前格式列，在右下角边缘按住鼠标左键不松，往下拖动；拖动到想要的行，然后松开左键，即可复制当前格式数据。
 
-![image-20211103095226468](../imgs/02/Summary/Office/Excel Mobile/image-20211103095226468.png)
+![image-20211103095226468](../imgs/02/Summary/Office/ExcelMobile/image-20211103095226468.png)
 
-![image-20211103095353459](../imgs/02/Summary/Office/Excel Mobile/image-20211103095353459.png)
+![image-20211103095353459](../imgs/02/Summary/Office/ExcelMobile/image-20211103095353459.png)
 
 ##### 方法2：
 
@@ -5697,9 +5697,9 @@ https://blog.csdn.net/begefefsef/article/details/126098501
 选中一个 单元格 → 点击 数据 → 下拉列表 → 点击 ✚可以添加多行内容
 ```
 
-![image-20220111155006519](../imgs/02/Summary/Office/Excel Mobile/image-20220111155006519.png)
+![image-20220111155006519](../imgs/02/Summary/Office/ExcelMobile/image-20220111155006519.png)
 
-![image-20220111155441113](../imgs/02/Summary/Office/Excel Mobile/image-20220111155441113.png)
+![image-20220111155441113](../imgs/02/Summary/Office/ExcelMobile/image-20220111155441113.png)
 
 ## PowerPoint Mobile
 
