--- a/应用文档/01_工具网站/常用网站.md
+++ b/应用文档/01_工具网站/常用网站.md
@@ -238,6 +238,17 @@ git push
 
 #### * 取消推送
 
+没有 commit
+
+```shell
+# 取消所有暂存的更改
+git restore --staged .
+# Git 2.23 之前
+git reset .
+```
+
+已经 commit
+
 ```shell
 假设 GitHub提交记录如下
 Y2024M12D26_V3		537286e
@@ -357,6 +368,12 @@ git credential-helper-selector
 git config --global --add safe.directory "*"
 -- 上传成功后，可重新Clone到本地，再删除全部允许配置
 git config --global --unset safe.directory
+
+# 重新恢复 .git 文件(会覆盖未提交的文件，需要先保存，reset之后，再覆盖)
+git init
+git remote add origin <远程仓库URL>
+git fetch
+git reset --hard origin/<分支名>
 ```
 
 ## 【[GitHub](https://github.com)】官网
@@ -1885,11 +1902,13 @@ https://gcc.gnu.org/releases.html
 ```markdown
 # 下载地址
 https://www.mingw-w64.org/downloads
-# MinGW-W64-builds
+# Pre-built Toolchains
+-- MinGW-W64-builds
 x86_64-14.2.0-release-posix-seh-msvcrt-rt_v12-rev0.7z
-# Tarballs for the mingw-w64 sources are hosted on SourceForge
-Home | Toolchains targetting Win64 | Personal Builds | mingw-builds | 8.1.0 | threads-posix | seh 
-→ x86_64-8.1.0-release-win32-seh-rt_v6-rev0.7z
+# Source Code
+-- Tarballs for the mingw-w64 sources are hosted on SourceForge
+https://sourceforge.net/projects/mingw-w64/files
+Toolchain sources | Personal Builds | mingw-builds → x86_64-8.1.0-release-win32-seh-rt_v6-rev0.7z
 
 # 说明
 Minimalist GNU for Windows
@@ -2066,9 +2085,10 @@ public class NativeTest {
 2) 创建动态链接库项目
 创建 c/c++ 项目，将以下文件复制到这个项目中：
   rootdir_demo_natives_NativeTest.h
+以下文件也可以复制在 D:\Program Files\Gcc\mingw64\lib\gcc\x86_64-w64-mingw32\14.2.0\include-fixed
   jdk\include\jni.h
   jdk\include\win32\jni_md.h
-将 rootdir_demo_natives_NativeTest.h 中引入的 <jni.h> 改成 "jni.h"
+将 rootdir_demo_natives_NativeTest.h 中引入的 <jni.h> 改成 "jni.h" (上述文件如果不在当前项目，则需要 <> 引入)
 创建一个 cpp 文件，引入 rootdir_demo_natives_NativeTest.h 头文件
 如 rootdir_demo_natives_NativeTest.cpp；在这个 cpp 文件中编写 java native 方法的方法体
     #include "rootdir_demo_natives_NativeTest.h"
